# Blackhole_6

./: .gitignore  Blackhole_6.vcxproj  Blackhole_6.vcxproj.filters  CMakeLists.txt  README.md  camera.h  config.h  main.cpp  matrix.h  physics.h  polygon.h  properties.h  raytracing.h  singleton.h
.github/workflows/: build.yml
x64/Debug/: vc142.idb
x64/Debug/Blackhole_6.tlog/: Blackhole_6.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
